<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thequestion"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:text="@string/the_question"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="460dp"
        android:layout_below="@+id/thequestion"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/picnictime" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exit"
        android:layout_marginBottom="16dp"
        android:text="@string/vacation"
        android:padding="8dp"
        android:id="@+id/text_view"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view"
        android:layout_alignParentLeft="true"
        android:text="@string/button1"
        android:id="@+id/ButtonNext"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:onClick="goNext"/>

    <Button
        android:id="@+id/ButtonRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view"
        android:text="@string/button2"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:onClick="ran"/>

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view"
        android:layout_alignParentRight="true"
        android:text="@string/button3"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:onClick="goBack"/>


</RelativeLayout>

